test/nl/formats/liberty/benchmarks/errors/bundle_members_mismatch_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      members (D0, D1);
      pin (D0) {
        direction : input;
      }
    }
  }
}
